--- a/public/control-panel.html
+++ b/public/control-panel.html
@@ -31,6 +31,7 @@
         <input type="radio" name="fontSize" value="large" checked> Large<br>
         <input type="radio" name="fontSize" value="small"> Small<br>
     </form>
+    </form>
 </section>
 
 <script src="assets/cpanel.bundle.js"></script>
