--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,38 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class=container>
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="#">Productivity App</a>
-    <ul class="nav navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="control-panel.html">Control Panel</a>
-        </li>
-    </ul>
-</nav>
-<h1>Welcome to the Flux-Redux Productivity App!</h1>
-<ul class="list-group">
-    <a href="control-panel.html" class="list-group-item">Control Panel</a>
-</ul>
+    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+        <a class="navbar-brand" href="/">Productivity App</a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="control-panel.html">Control Panel</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link active" href="tasks.html">Tasks</a>
+            </li>
+        </ul>
+    </nav>
+    <section class="container">
+        <h1>Tasks</h1>
+    </section>
+    <section id=tasks></section>
+    <form class="form-inline" name="newTask">
+        <input type="text" class="form-control" name="newTaskName" placeholder="Add a new task">
+        <button type="submit" class="btn btn-primary">Add</button>
+    </form>
+    <form name="undo">
+        <button type="submit" class="btn btn-secondary">Undo Last Change</button>
+    </form>
+    <section>
+    
+        <div class="form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" id="showComplete" checked> Show Completed
+            </label>
+        </div>
+    </section>
+    
+    <script src="assets/tasks.bundle.js"></script>
 
 
 </body>
